<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="?android:selectableItemBackground"
        android:clickable="false"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/background_material_light"
        card_view:cardCornerRadius="@dimen/cardCornerRadius"
        card_view:cardElevation="@dimen/cardElevation"
        card_view:cardUseCompatPadding="true">
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="@dimen/margin"
                android:text="@string/infoBasica"
                android:textStyle="bold"
                android:textColor="@color/colorAlmostBlack"
                android:textSize="@dimen/menu_tipo"
                android:typeface="sans" />
            <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           >

            <ImageView
                android:id="@+id/imagemPokemon"
                android:layout_alignParentRight="true"
                android:layout_width="100dp"
                android:layout_height="100dp"
              />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/layoutTitle"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nomePokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="@dimen/margin"
                    android:textSize="@dimen/menu_tipo"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/alturaPokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="@dimen/margin"
                    android:textSize="@dimen/menu_tipo"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/pesoPokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="@dimen/margin"
                    android:textSize="@dimen/menu_tipo"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutTitle"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="@dimen/margin"
                    android:text="@string/nome"
                    android:textColor="@color/colorAlmostBlack"
                    android:textSize="@dimen/menu_tipo"
                    android:typeface="sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="@dimen/margin"
                    android:text="@string/altura"
                    android:textColor="@color/colorAlmostBlack"
                    android:textSize="@dimen/menu_tipo"
                    android:typeface="sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="@dimen/margin"
                    android:text="@string/peso"
                    android:textColor="@color/colorAlmostBlack"
                    android:textSize="@dimen/menu_tipo"
                    android:typeface="sans" />
            </LinearLayout>

        </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="@dimen/margin"
                android:text="@string/infoHabilidades"
                android:textStyle="bold"
                android:textColor="@color/colorAlmostBlack"
                android:textSize="@dimen/menu_tipo"
                android:typeface="sans" />
            <TextView
                android:id="@+id/habilidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="@dimen/margin"
                android:textSize="@dimen/menu_tipo"
                android:text=".....loading"
                android:typeface="sans" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="@dimen/margin"
                android:text="@string/infoMovimentos"
                android:textStyle="bold"
                android:textColor="@color/colorAlmostBlack"
                android:textSize="@dimen/menu_tipo"
                android:typeface="sans" />
            <TextView
                android:id="@+id/movimentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="@dimen/margin"
                android:textSize="@dimen/menu_tipo"
                android:text=".....loading"
                android:typeface="sans" />
        </LinearLayout></android.support.v4.widget.NestedScrollView>
    </android.support.v7.widget.CardView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:backgroundTint="@color/colorAppBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_share_foreground"
        android:layout_margin="16dp" />

</RelativeLayout>